rename `osta` -> `one` and `OSTA` -> `ONE` in all files
The tests pass.

--- a/README.org
+++ b/README.org
@@ -1,2 +1,2 @@
-~osta~ (Org Static) provides few functions to build static websites
-leveraging Emacs Lisp and org-mode.
+~one~ provides few functions to build static websites leveraging Emacs
+Lisp and org-mode.
